--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 ::-webkit-scrollbar {
     width: 10px;
+    height: 10px;
 }
 
 ::-webkit-scrollbar-thumb {
@@ -7,9 +8,9 @@
 }
 
 ::-webkit-scrollbar-thumb:hover {
-     background: rgb(51, 51, 51);  
+     background: rgb(66, 66, 66);  
 }
 
 ::-webkit-scrollbar-track {
-    background: #2e2e2e0f;
+    background: #ffffff00;
 }
